examples/invalid/63_parameterized_alias_result_kind_mismatch.lane
module Examples.Invalid.ParameterizedAliasResultKindMismatch

type Bad[F : [Type] -> Type] : Type = type[A] => F[A]
